2010-08-29  Enrica Casucci  <enrica@apple.com>

        Reviewed by Adele Peterson.

        Crash when dragging text in Google Docs
        https://bugs.webkit.org/show_bug.cgi?id=20471
        <rdar://problem/7783629>
        
        This fixes the crash but also fixes the generated markup when
        performing a replacement at the border with an inline, to avoid the 
        new content being merged into the inline.
        The crash is happening when doApply detects the need of merging
        the start and the end of the new paragraph and the destination position
        is moved inside an inline.
        
        I've added new test cases to an existing layout test.
        
        * editing/ReplaceSelectionCommand.cpp:
        (WebCore::ReplaceSelectionCommand::doApply): When the situation described above is detected,
        we insert a placeholder to avoid merging into the inline.

2010-08-29  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Implement HTML5's fakepath
        https://bugs.webkit.org/show_bug.cgi?id=29000

        The HTML 5 spec says to prepend C:\fakepath\ to the value of an
        <input type="file"> control, so that's what we do now.

        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::value):

2010-08-29  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r66329.
        http://trac.webkit.org/changeset/66329
        https://bugs.webkit.org/show_bug.cgi?id=44845

        broke chromium mac (Requested by jamesr on #webkit).

        * WebCore.gypi:
        * WebCore.xcodeproj/project.pbxproj:
        * platform/graphics/mac/FontPlatformData.h: Renamed from WebCore/platform/graphics/cocoa/FontPlatformData.h.
        (WebCore::toCTFontRef):
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::isHashTableDeletedValue):
        (WebCore::FontPlatformData::size):
        (WebCore::FontPlatformData::syntheticBold):