@@ -1,3 +1,15 @@
+2010-08-29  Kwang Yul Seo  <skyul@company100.net>
+
+        Reviewed by Kent Tamura.
+
+        [BREWMP] Port SharedBuffer::createWithContentsOfFile
+        https://bugs.webkit.org/show_bug.cgi?id=34412
+
+        Implement SharedBuffer::createWithContentsOfFile with IFile.
+
+        * platform/brew/SharedBufferBrew.cpp: Added.
+        (WebCore::SharedBuffer::createWithContentsOfFile):
+
 2010-08-29  Enrica Casucci  <enrica@apple.com>
 
         Reviewed by Adele Peterson.
